[gd_scene load_steps=13 format=2]

[ext_resource path="res://sprites/cavestuff/crumbledoor/cd0.png" type="Texture" id=1]
[ext_resource path="res://sprites/cavestuff/crumbledoor/cd1.png" type="Texture" id=2]
[ext_resource path="res://sprites/cavestuff/crumbledoor/cd3.png" type="Texture" id=3]
[ext_resource path="res://sprites/cavestuff/crumbledoor/cd2.png" type="Texture" id=4]
[ext_resource path="res://hitnhurtboxes/hurtbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Levels/0.0 Cave/CrumblyWall.gd" type="Script" id=6]
[ext_resource path="res://Brains/Stats.tscn" type="PackedScene" id=7]



[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 4 ), ExtResource( 3 ) ],
"loop": false,
"name": "crumble",
"speed": 12.0
} ]

[sub_resource type="Animation" id=2]
resource_name = "crumble"
tracks/0/type = "value"
tracks/0/path = NodePath("StaticBody2D/CollisionPolygon2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "crumble" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 3 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AnimatedSprite:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="Animation" id=5]
resource_name = "shake"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 3.05176e-05, -89.3588 ), Vector2( 7.6282, -88.269 ), Vector2( -9.80765, -88.269 ), Vector2( -1.08969, -88.269 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "standing"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "default" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("StaticBody2D/CollisionPolygon2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="CapsuleShape2D" id=4]
radius = 67.7423

[node name="CrumblyWall" type="Node2D"]
script = ExtResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -1.08969, -88.269 )
frames = SubResource( 1 )
animation = "crumble"
frame = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "standing"
anims/crumble = SubResource( 2 )
anims/shake = SubResource( 5 )
anims/standing = SubResource( 3 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2( 3.26923, 0 )
polygon = PoolVector2Array( -136.039, -58.2907, -72.8344, -11.4318, -37.9626, -0.534424, 24.1526, 1.64505, 57.9346, -4.89337, 146.204, -68.0984, 132.037, -147.65, -141.488, -156.367 )
disabled = true

[node name="Stats" parent="." instance=ExtResource( 7 )]

[node name="HurtBox" parent="." instance=ExtResource( 5 )]
collision_layer = 16

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( 0, -70.8332 )
shape = SubResource( 4 )
[connection signal="out_of_health" from="Stats" to="." method="_on_Stats_out_of_health"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]

[editable path="HurtBox"]
